--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
+    "debug": "nodemon --inspect index.js",
     "dbCreate": "cross-env MIGRATE_TOOL=true npx sequelize-cli db:create",
     "migrate": "cross-env MIGRATE_TOOL=true npx sequelize-cli db:migrate",
     "seed": "cross-env MIGRATE_TOOL=true npx sequelize-cli db:seed:all",
