--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "ENV Developer" : {
             "hostname" : "localhost:5000",
             "contentType" : "application/json",
-
+            "tokenMS": "f3c2090f43628d18057adeb587eb8eab57b45c7c",
             "urlMoysklad" : "https://online.moysklad.ru/api/remap/1.2",
         }
     }
