--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "express-fileupload": "^1.4.0",
     "jest": "^29.4.3",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mysql2": "^3.0.1",
     "sequelize": "^6.29.0",
     "sequelize-cli": "^6.6.0",
