--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+     "file": "^0.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
