--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "craco": "^0.0.3",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.9.0",
+    "mobx-react": "^9.0.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
