--- a/server/package.json
+++ b/server/package.json
@@ -3,16 +3,16 @@
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-     "file": "^0.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "file": "^0.2.2",
     "jest": "^29.4.3",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
-    "mysql2": "^3.0.1",
-    "sequelize": "^6.29.0",
+    "mysql2": "^3.5.2",
+    "sequelize": "^6.32.1",
     "sequelize-cli": "^6.6.0",
     "sequelize-mig": "github:sacredneobi/sequelize-mig",
     "xmlbuilder": "^15.1.1"
@@ -36,6 +36,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "module-alias": "^2.2.3"
+  },
+  "_moduleAliases": {
+    "@utils": "utils",
+    "@class": "class",
+    "@models": "db/models",
+    "@config": "config"
   }
 }
