--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,11 @@
     "axios": "^1.2.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-     "file": "^0.2.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "file": "^0.2.2",
     "jest": "^29.4.3",
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
@@ -36,6 +36,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "module-alias": "^2.2.3"
+  },
+  "_moduleAliases": {
+    "@utils": "utils",
+    "@models": "db/models"
   }
 }
